[package]
name = "straw"
description = "WIP Rust -> HTML renderer"
version = "0.1.0"
authors = ["Blake Williams <blake@blakewilliams.me>"]
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/BlakeWilliams/straw"

[lib]
name = "straw"
path = "src/lib.rs"
test = true
doctest = false
